--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<label for="first_name">first Name</label>
+  <input type="text" name="first_name" id="f_name"><br>
+  <label for="last_name">last name</label>
+  <input type="text" name="last_name" id="l_name"><br>
+  <label for="ph_number">Phone Number</label>
+  <input type="number" name="ph_number" id="phone_no"><br>
+  <label for="email_id">E-mail</label>
+  <input type="email" name="email_id" id="email"><br>
+  <button id="btn" type="submit">Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
