--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-
-	<label for="First Name">first Name</label>
+<form>
+  <label for="First Name">first Name</label>
   <input type="text" name="First Name" id="f_name"><br>
   <label for="Last Name">last name</label>
   <input type="text" name="Last Name" id="l_name"><br>
@@ -18,6 +18,8 @@
   <label for="Email ID">E-mail</label>
   <input type="email" name="Email ID" id="email"><br>
   <button id="btn" type="submit">Submit</button>
+</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
